...
            Column(
                modifier =
                    Modifier.padding(paddingValues)
                        .fillMaxSize()
                        .verticalScroll(scrollState)
                        .background(Color(MAIN_BACKGROUND))
                        .testTag("activityCreateScreen"),
            ) {
              if (isGalleryOpen) {
                GalleryScreen(
                    isGalleryOpen = { isGalleryOpen = false },
                    addImage = { bitmap -> selectedImages.add(bitmap) },
                    context = context)
...
                    }
                  },
                  modifier =
                      Modifier.width(BUTTON_WIDTH.dp)
                          .background(Color.Transparent)
                          .height(BUTTON_HEIGHT_SM.dp)
                          .testTag("createButton")
                          .align(Alignment.CenterHorizontally),
                  shape = RoundedCornerShape(ROUNDED_CORNER_SHAPE_DEFAULT.dp),
                  colors =
                      ButtonColors(
                          containerColor = Color(MAIN_COLOR_DARK),
                          contentColor = Color.White,
...
 * @param maxLength The maximum allowed length for the text input field.
 */
@Composable
fun RemainingPlace(field: String, maxLength: Int) {
  Row(
      modifier =
          Modifier.fillMaxWidth().padding(horizontal = MEDIUM_PADDING.dp).testTag("remainingPlace"),
      horizontalArrangement = Arrangement.End) {
        Column(
            horizontalAlignment = Alignment.End,
            modifier = Modifier.testTag("remainingPlaceColumn")) {
              Text(
                  text = "${field.length}/$maxLength characters",
                  fontSize = MEDIUM_PADDING.sp,
                  color = Color.Gray,
                  modifier = Modifier.testTag("remainingPlaceText"))
              LinearProgressIndicator(
                  progress = field.length / maxLength.toFloat(),
                  modifier =
                      Modifier.height(STANDARD_PADDING.dp)
                          .width(130.dp)
                          .clip(RoundedCornerShape(SMALL_PADDING.dp))
                          .testTag("remainingPlaceProgress"),
                  color = Color(DARK_BLUE_COLOR),
                  backgroundColor = Color.LightGray)
            }
      }
}

